- Algunos arreglos de código en consideración a las reglas de Sonar.